--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ body {
     height: 600px;
     background-size: cover;
     background-repeat: no-repeat;
-    
 }
 
 .margen {
@@ -53,19 +52,32 @@ hr {
 }
 
 article {
-    padding: 10px;
+    margin: 50px;
     display: inline-block;
+    
 }
 
 article img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
 }
 
 #lineas {
+    padding: 20px;
     border-left: solid grey;
     border-right: solid grey;
 }
+
+#button {
+    color: rgb(147, 160, 239);
+    border: solid  rgb(147, 160, 239);
+    border-radius: 20px;
+    padding: 20px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+  }
 
 .formulario{
     background-color: rgb(147, 160, 239);
@@ -84,25 +96,52 @@ article img {
 .formulario label {
     color: black;
     margin: 20px;
-
 }
 
-form{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+input{
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    margin: 0 50px 0 50px;
+}
 
-    width: 100%;
-    max-width: 100px;
-    margin-right: auto;
-    margin-left: auto; 
+input[type=textarea] {
+    height: 150px;
 }
 
 #nuestras-promociones{
-    margin: auto;
+    margin: -50px 300px -50px 300px;
     color: black;
-    justify-content: space-between;
     height: 600px;
-   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
 }
 
+.division img {
+    width: 200px;
+    height: 200px;
+}
+
+.button-pastel {
+    color: rgb(147, 160, 239);
+    border: solid  rgb(147, 160, 239);
+    border-radius: 20px;
+    padding: 10px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#button-form {
+    border-radius: 20px;
+    padding: 10px;
+    text-align: center;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: bold;
+    cursor: pointer;
+}
